--- a/Prog Carosello.html
+++ b/Prog Carosello.html
@@ -57,9 +57,196 @@
                 </div>
                 <img src="hero-img.png" alt="hero" class="hero">
             </div>
-            <div class="Container1"></div>
+
+            <div class="barra d-flex flex-row">
+                <div class="blocco d-flex flex-row p-3">
+                    <img src="video_camera_front_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" alt="video">
+                    <div class="p-2">
+                        <h6>30,000 online courses</h6>
+                        <p>Enjoy a variety of fresh topics</p>
+                    </div>
+                </div>
+                <div class="blocco d-flex flex-row p-3">
+                    <img src="group_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" alt="persone">
+                    <div class="p-2">
+                        <h6>Expert Instruction</h6>
+                        <p>Find the right instructor for you</p>
+                    </div>
+                </div>
+                <div class="blocco d-flex flex-row p-3">
+                    <img src="schedule_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" alt="orologio">
+                    <div class="p-2">
+                        <h6>Lifetime access</h6>
+                        <p>Learn on you schedule</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="Container2">
+                <h4 class="p-2">Recommended to you</h4>
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active d-flex flex-row">
+
+                        <div class="card" style="width: 18rem;">
+                            <img src="course-javascript.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">GraphQL: introdution to graphQL for beginners</h5>
+                              <div class="Dati d-flex flex-row">
+                                <img src="schedule_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span>4h 10min</span>
+                                <img src="sort_24dp_634FA2_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span>Advance</span>
+                              </div>
+                              <div class="Dati p-2">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_half_24dp_E9CF25_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <img src="star_24dp_E9CF25_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span class="p-2">3.5<span class="p-2">(7,500)</span></span>
+                              </div>
+                              <p><strong>$700</strong><span class="m-2"><del>$850</del></span></p>
+                            </div>
+                            <div class="ultimo d-flex flex-row">
+                                <div class="d-flex flex-row">
+                                    <img src="avatar-1.jpg" alt="">
+                                    <p class="m-2">Jenny Wilson</p>
+                                </div>
+                                <img src="bookmark_border_24dp_999999.svg" alt="">
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 18rem;">
+                            <img src="course-javascript.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">GraphQL: introdution to graphQL for beginners</h5>
+                              <div class="Dati d-flex flex-row">
+                                <img src="schedule_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span>4h 10min</span>
+                                <img src="sort_24dp_634FA2_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span>Advance</span>
+                              </div>
+                              <div class="Dati p-2">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_half_24dp_E9CF25_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <img src="star_24dp_E9CF25_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span class="p-2">3.5<span class="p-2">(7,500)</span></span>
+                              </div>
+                              <p><strong>$700</strong><span class="m-2"><del>$850</del></span></p>
+                            </div>
+                            <div class="ultimo d-flex flex-row">
+                                <div class="d-flex flex-row">
+                                    <img src="avatar-1.jpg" alt="">
+                                    <p class="m-2">Jenny Wilson</p>
+                                </div>
+                                <img src="bookmark_border_24dp_999999.svg" alt="">
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 18rem;">
+                            <img src="course-javascript.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">GraphQL: introdution to graphQL for beginners</h5>
+                              <div class="Dati d-flex flex-row">
+                                <img src="schedule_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span>4h 10min</span>
+                                <img src="sort_24dp_634FA2_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span>Advance</span>
+                              </div>
+                              <div class="Dati p-2">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_half_24dp_E9CF25_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <img src="star_24dp_E9CF25_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span class="p-2">3.5<span class="p-2">(7,500)</span></span>
+                              </div>
+                              <p><strong>$700</strong><span class="m-2"><del>$850</del></span></p>
+                            </div>
+                            <div class="ultimo d-flex flex-row">
+                                <div class="d-flex flex-row">
+                                    <img src="avatar-1.jpg" alt="">
+                                    <p class="m-2">Jenny Wilson</p>
+                                </div>
+                                <img src="bookmark_border_24dp_999999.svg" alt="">
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 18rem;">
+                            <img src="course-javascript.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">GraphQL: introdution to graphQL for beginners</h5>
+                              <div class="Dati d-flex flex-row">
+                                <img src="schedule_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span>4h 10min</span>
+                                <img src="sort_24dp_634FA2_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span>Advance</span>
+                              </div>
+                              <div class="Dati p-2">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_24dp_E9CF25.svg" alt="">
+                                <img src="star_half_24dp_E9CF25_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <img src="star_24dp_E9CF25_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                                <span class="p-2">3.5<span class="p-2">(7,500)</span></span>
+                              </div>
+                              <p><strong>$700</strong><span class="m-2"><del>$850</del></span></p>
+                            </div>
+                            <div class="ultimo d-flex flex-row">
+                                <div class="d-flex flex-row">
+                                    <img src="avatar-1.jpg" alt="">
+                                    <p class="m-2">Jenny Wilson</p>
+                                </div>
+                                <img src="bookmark_border_24dp_999999.svg" alt="">
+                            </div>
+                          </div>
+
+            
+
+                      </div>
+                      <div class="carousel-item">
+
+                        <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 18rem;">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+
+
+                      </div>
+                      <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+
             <div class="Container2"></div>
-            <div class="Container3"></div>
+
+            <div class="Container2"></div>
         </main>
         <footer></footer>
     </body>
